src/test/deca/codegen/invalid/inst_forgot_return.deca
// No return when it was expected

class A  {
    int getInt(){
        int x = 5;
    }
}

{
    A a = new A();
    print(a.getInt());
}
